fixed nav add gap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,3 +2,7 @@ body{
     background-color: #CBE2F6;
     text-align: center;
 }
+nav {
+    display: flex;
+    gap: 15px;
+}
